[package]
name = "warble"
version = "0.1.0"
authors = ["Merry Mou <moumerry@gmail.com>"]
edition = "2018"

[dependencies]
strobe-rs = "0.4.0"
rand_core = { version = "0.3.1", default-features = false }
yodel = { git = "https://github.com/evq/yodel", branch = "master" }
io = "0.0.2"

[dev-dependencies]
rand = { version = "0.6.0" }
