[package]
name = "warble"
version = "0.1.0"
authors = ["Merry Mou <moumerry@gmail.com>"]
edition = "2018"

[dependencies]
strobe-rs = { git = "https://git.cutelab.house/evq/strobe-rs", branch = "master", default-features = false }
rand_core = { version = "0.5.1", default-features = false }

[dev-dependencies]
yodel = { git = "https://git.cutelab.house/evq/yodel" }
rand = { version = "0.7" }
